Init branche develop

--- a/GED/src/main/resources/application.properties
+++ b/GED/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # DataSource settings
-spring.datasource.url = jdbc:mysql://localhost:3306/{nom de la base}
-spring.datasource.username = {username}
-spring.datasource.password = {password}
+spring.datasource.url = jdbc:mysql://localhost:3306/ged_comptes_dev
+spring.datasource.username = root
+spring.datasource.password = root
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 
 # Specify the DBMS
